samples/_failures_safe/1761790505_b934f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b213629.c: In function ‘main’:
./samples/SAFE/__tmp_3b213629.c:160:17: error: expected ‘;’ at end of input
  160 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_3b213629.c:160:9: error: expected declaration or statement at end of input
  160 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_3b213629.c:160:9: error: expected declaration or statement at end of input
